# orquestra-opt

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: coverage.yml  publish_release.yml  style.yml
src/orquestra/opt/: convex.py  cost_function_augmentations.py  gradients.py  mock_objects.py
src/orquestra/opt/api/: __init__.py  _problem_evaluation.py  bqm_solver.py  bqm_solver_test.py  cost_function.py  example_functions.py  functions.py  optimizer.py  optimizer_test.py  problem.py  save_conditions.py
src/orquestra/opt/bqm/: conversions.py  io.py  utils.py
src/orquestra/opt/history/: __init__.py  recorder.py
src/orquestra/opt/optimizers/: __init__.py  basin_hopping.py  cma_es_optimizer.py  least_squares.py  qiskit_optimizer.py  scikit_quant_optimizer.py  scipy_optimizer.py  search_points_optimizer.py  simple_gradient_descent.py  tensor_train_optimizer.py
src/orquestra/opt/optimizers/grid_search/: __init__.py  _grid_serialization.py  _parameter_grid.py
src/orquestra/opt/optimizers/pso/: __init__.py  continuous_pso_optimizer.py  topologies.py
src/orquestra/opt/problems/: __init__.py  generators.py  graph.py  graph_partition.py  max_independent_set.py  maxcut.py  vertex_cover.py
src/orquestra/optimization/: convex.py  mock_objects.py
src/orquestra/optimization/api/: __init__.py  cost_function.py  example_functions.py  optimizer.py  optimizer_test.py
src/orquestra/optimization/bqm/: conversions.py  io.py  utils.py
src/orquestra/optimization/bqm/interfaces/: bqm_solver.py  bqm_solver_test.py
src/orquestra/optimization/history/: __init__.py  recorder.py
src/orquestra/optimization/optimizers/: __init__.py  basin_hopping.py  cma_es_optimizer.py  qiskit_optimizer.py  scipy_optimizer.py  search_points_optimizer.py  simple_gradient_descent.py
src/orquestra/optimization/optimizers/grid_search/: _grid_search.py  _parameter_grid.py
subtrees/z_quantum_actions/: Makefile
tests/: test_foo.py
tests/orquestra/functions/: copying_test.py
tests/orquestra/opt/: test_cost_function_augmentations.py
tests/orquestra/opt/api/: artifact_storage_test.py  attribute_forwarding_test.py  copying_test.py  functions_test.py  gradients_test.py  optimizer_contract_test.py  optimizer_test.py  optimizer_utils_test.py  save_conditions_test.py
tests/orquestra/opt/bqm/: test_conversion.py  test_io.py
tests/orquestra/opt/history/: recording_functions_test.py  recording_functions_with_gradient_test.py
tests/orquestra/opt/optimizers/: basin_hopping_test.py  cma_es_optimizer_test.py  least_squares_test.py  pso_test.py  qiskit_optimizer_test.py  scikit_quant_optimizer_test.py  scipy_optimizer_test.py  search_points_optimizer_test.py  simple_gradient_descent_test.py  tensor_train_optimizer_test.py
tests/orquestra/opt/optimizers/grid_search/: _grid_search_test.py  _parameter_grid_test.py  _serialization_test.py
tests/orquestra/opt/problems/: _helpers.py  generators_test.py  graph_partition_test.py  max_independent_set_test.py  maxcut_test.py  solve_problem_by_exhaustive_search_test.py  vertex_cover_test.py
tests/orquestra/optimization/: convex.py
tests/orquestra/optimization/api/: artifact_storage_test.py  attribute_forwarding_test.py  copying_test.py  functions_test.py  gradients_test.py  optimizer_contract_test.py  optimizer_test.py  optimizer_utils_test.py  save_conditions_test.py
tests/orquestra/optimization/bqm/: test_conversion.py  test_io.py
tests/orquestra/optimization/history/: recording_functions_test.py  recording_functions_with_gradient_test.py
tests/orquestra/optimization/interfaces/: optimizer_utils_test.py
tests/orquestra/optimization/optimizers/: basin_hopping_test.py  cma_es_optimizer_test.py  optimizer_test.py  qiskit_optimizer_test.py  scipy_optimizer_test.py  search_points_optimizer_test.py  simple_gradient_descent_test.py
(+3 files in other folders)
