[metadata]
name = orquestra-opt
description = "Orquestra's library with optimization routines and interfaces"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orquestra-opt
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8,!=3.9.7,<3.11

install_requires =
    orquestra-quantum
    numpy>=1.20
    scipy>=1.4.1
    cma>=3.0.0
    networkx>=2.4


[options.packages.find]
where = src

[options.extras_require]
qiskit =
    qiskit>=0.28, <0.34;python_version<'3.10'
    qiskit>=0.34;python_version>='3.10'
    symengine~=0.7
qubo =
    dimod>=0.9.11
    cvxpy~=1.1.11
all =
    orquestra-opt[qiskit]
    orquestra-opt[qubo]
dev =
    black~=22.3
    flake8~=3.9.0
    isort~=5.9.0
    mypy~=0.910
    pytest~=6.2
    pytest-cov>=2.12
    orquestra-opt[all]

[flake8]
ignore = E203,E266,F401,W605
max-line-length = 88
