[metadata]
name = orquestra-opt
description = "Orquestra's library with optimization routines and interfaces"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orquestra-opt
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8,!=3.9.7,<3.11

install_requires =
    orquestra-quantum
    numpy>=1.20
    scipy>=1.4.1
    networkx>=2.4


[options.packages.find]
where = src

[options.extras_require]
scikit-quant = 
    scikit-quant>=0.8.0
cma = 
    cma>=3.0.0
qiskit =
    orquestra-qiskit
qubo =
    dimod>=0.9.11
    cvxpy~=1.1.11
ttopt =
    ttopt~=0.5.0
    teneva
all =
    orquestra-opt[cma]
    orquestra-opt[qiskit]
    orquestra-opt[qubo]
    orquestra-opt[scikit-quant]
    orquestra-opt[ttopt]
dev =
    orquestra-python-dev
    orquestra-opt[all]
